--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Grupo/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Grupo/Index.cshtml
@@ -10,10 +10,10 @@
 @using (Html.BeginForm())
 {
 
-    @Html.Action("GridViewPartial_grupo", new { IdCategoria = ViewBag.IdCategoria, IdLinea = ViewBag.IdLinea })
+    @Html.Action("GridViewPartial_grupo", new { IdEmpresa = ViewBag.IdEmpresa, IdCategoria = ViewBag.IdCategoria, IdLinea = ViewBag.IdLinea })
 
     <div class="box-footer">
-        <a class="btn btn-default" href="@Url.Action("Index","Linea",new {IdCategoria = ViewBag.IdCategoria, IdLinea = ViewBag.IdLinea, Area = "Inventario" },null)">Volver</a>
+        <a class="btn btn-default" href="@Url.Action("Index","Linea",new {IdEmpresa = ViewBag.IdEmpresa,IdCategoria = ViewBag.IdCategoria, IdLinea = ViewBag.IdLinea, Area = "Inventario" },null)">Volver</a>
     </div>
 
 }
