--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Categoria/_GridViewPartial_categoria.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Categoria/_GridViewPartial_categoria.cshtml
@@ -61,8 +61,8 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdCategoria = DataBinder.Eval(tc.DataItem, "IdCategoria") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdCategoria = DataBinder.Eval(tc.DataItem, "IdCategoria") },
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdCategoria = DataBinder.Eval(tc.DataItem, "IdCategoria") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdCategoria = DataBinder.Eval(tc.DataItem, "IdCategoria") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -73,7 +73,7 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa  = Core.Erp.Web.Helps.SessionFixed.IdEmpresa}).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
@@ -90,12 +90,15 @@
             column.Width = Unit.Pixel(120);
             column.SetDataItemTemplateContent(container =>
             {
-                Html.DevExpress().HyperLink(hyperlink =>
+                if (Convert.ToString(DataBinder.Eval(container.DataItem, "Estado")) == "A")
                 {
-                    var keyValue = DataBinder.Eval(container.DataItem, "IdCategoria");
-                    hyperlink.Properties.Text = "Líneas";
-                    hyperlink.NavigateUrl = Url.Action("Index", "Linea", new { IdCategoria = keyValue });
-                }).Render();
+                    Html.DevExpress().HyperLink(hyperlink =>
+                    {
+                        var keyValue = DataBinder.Eval(container.DataItem, "IdCategoria");
+                        hyperlink.Properties.Text = "Líneas";
+                        hyperlink.NavigateUrl = Url.Action("Index", "Linea", new { IdEmpresa = DataBinder.Eval(container.DataItem, "IdEmpresa"), IdCategoria = keyValue });
+                    }).Render();
+                }
             });
         });
     });
