--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Grupo/_GridViewPartial_grupo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Grupo/_GridViewPartial_grupo.cshtml
@@ -3,7 +3,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridView_grupo";
-        settings.CallbackRouteValues = new { Controller = "Grupo", Action = "GridViewPartial_grupo", IdCategoria = ViewBag.IdCategoria, IdLinea = ViewBag.IdLinea };
+        settings.CallbackRouteValues = new { Controller = "Grupo", Action = "GridViewPartial_grupo", IdEmpresa = ViewBag.IdEmpresa, IdCategoria = ViewBag.IdCategoria, IdLinea = ViewBag.IdLinea };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdGrupo";
 
@@ -60,8 +60,8 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdGrupo = DataBinder.Eval(tc.DataItem, "IdGrupo"), IdCategoria = ViewBag.IdCategoria, IdLinea = ViewBag.IdLinea }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdGrupo = DataBinder.Eval(tc.DataItem, "IdGrupo"), IdCategoria = ViewBag.IdCategoria, IdLinea = ViewBag.IdLinea },
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdGrupo = DataBinder.Eval(tc.DataItem, "IdGrupo"), IdCategoria = ViewBag.IdCategoria, IdLinea = ViewBag.IdLinea }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdGrupo = DataBinder.Eval(tc.DataItem, "IdGrupo"), IdCategoria = ViewBag.IdCategoria, IdLinea = ViewBag.IdLinea },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -69,7 +69,7 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo", new { IdCategoria = ViewBag.IdCategoria, IdLinea = ViewBag.IdLinea }).ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa, IdCategoria = ViewBag.IdCategoria, IdLinea = ViewBag.IdLinea }).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
@@ -80,22 +80,33 @@
         settings.Columns.Add("cod_grupo", "Código").Width = Unit.Percentage(20);
         settings.Columns.Add("nom_grupo", "Descripción").Width = Unit.Percentage(60);
         settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(20);
+
+
         settings.Columns.Add(column =>
         {
+
             column.Caption = "Subgrupo";
             column.Width = Unit.Pixel(120);
             column.SetDataItemTemplateContent(container =>
             {
-                Html.DevExpress().HyperLink(hyperlink =>
+                if (Convert.ToString(DataBinder.Eval(container.DataItem, "Estado")) =="A" )
                 {
+                    Html.DevExpress().HyperLink(hyperlink =>
+                    {
 
-                    var IdLinea = DataBinder.Eval(container.DataItem, "IdLinea");
-                    var IdCategoria = DataBinder.Eval(container.DataItem, "IdCategoria");
-                    var IdGrupo = DataBinder.Eval(container.DataItem, "IdGrupo");
-                    hyperlink.Properties.Text = "Subgrupos";
-                    hyperlink.NavigateUrl = Url.Action("Index", "Subgrupo", new { IdCategoria = IdCategoria, IdLinea = IdLinea, IdGrupo = IdGrupo });
-                }).Render();
+                        var IdLinea = DataBinder.Eval(container.DataItem, "IdLinea");
+                        var IdCategoria = DataBinder.Eval(container.DataItem, "IdCategoria");
+                        var IdGrupo = DataBinder.Eval(container.DataItem, "IdGrupo");
+                        hyperlink.Properties.Text = "Subgrupos";
+                        hyperlink.NavigateUrl = Url.Action("Index", "Subgrupo", new { IdEmpresa = DataBinder.Eval(container.DataItem, " IdEmpresa"), IdCategoria = IdCategoria, IdLinea = IdLinea, IdGrupo = IdGrupo });
+                    }).Render();
+                }
             });
+
+
+
+
+
         });
     });
 }
