--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Linea/_GridViewPartial_linea.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Linea/_GridViewPartial_linea.cshtml
@@ -2,7 +2,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridView_linea";
-        settings.CallbackRouteValues = new { Controller = "Linea", Action = "GridViewPartial_linea", IdCategoria = ViewBag.IdCategoria };
+        settings.CallbackRouteValues = new { Controller = "Linea", Action = "GridViewPartial_linea", IdEmpresa = ViewBag.IdEmpresa, IdCategoria = ViewBag.IdCategoria };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdLinea";
 
@@ -59,8 +59,8 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdLinea = DataBinder.Eval(tc.DataItem, "IdLinea"), IdCategoria = ViewBag.IdCategoria }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdLinea = DataBinder.Eval(tc.DataItem, "IdLinea"), IdCategoria = ViewBag.IdCategoria },
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdLinea = DataBinder.Eval(tc.DataItem, "IdLinea"), IdCategoria = ViewBag.IdCategoria }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdLinea = DataBinder.Eval(tc.DataItem, "IdLinea"), IdCategoria = ViewBag.IdCategoria },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -68,7 +68,7 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo", new { IdCategoria = ViewBag.IdCategoria }).ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa= Core.Erp.Web.Helps.SessionFixed.IdEmpresa, IdCategoria = ViewBag.IdCategoria }).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
@@ -87,13 +87,16 @@
             column.Width = Unit.Pixel(120);
             column.SetDataItemTemplateContent(container =>
             {
-                Html.DevExpress().HyperLink(hyperlink =>
+                if (Convert.ToString(DataBinder.Eval(container.DataItem, "Estado")) == "A")
                 {
-                    var IdLinea = DataBinder.Eval(container.DataItem, "IdLinea");
-                    var IdCategoria = DataBinder.Eval(container.DataItem, "IdCategoria");
-                    hyperlink.Properties.Text = "Grupos";
-                    hyperlink.NavigateUrl = Url.Action("Index", "Grupo", new { IdCategoria = IdCategoria, IdLinea = IdLinea });
-                }).Render();
+                    Html.DevExpress().HyperLink(hyperlink =>
+                    {
+                        var IdLinea = DataBinder.Eval(container.DataItem, "IdLinea");
+                        var IdCategoria = DataBinder.Eval(container.DataItem, "IdCategoria");
+                        hyperlink.Properties.Text = "Grupos";
+                        hyperlink.NavigateUrl = Url.Action("Index", "Grupo", new { IdEmpresa = DataBinder.Eval(container.DataItem, "IdEmpresa"), IdCategoria = IdCategoria, IdLinea = IdLinea });
+                    }).Render();
+                }
             });
         });
     });
