--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/MotivoInventario/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/MotivoInventario/Nuevo.cshtml
@@ -8,60 +8,61 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @using (Html.BeginForm("Nuevo", "MotivoInventario", FormMethod.Post, new { @class = "form", @role = "form" }))
-{
-    <div class="row">
+{@Html.HiddenFor(q => q.IdEmpresa)
+
+<div class="row">
+    <div class="col-md-12">
+        <div class="col-md-3">
+            <div class="form-group">
+                <label for="Cod_Motivo_Inv">Código</label>
+                @Html.TextBoxFor(q => q.Cod_Motivo_Inv, new { @class = "form-control" })
+                @Html.ValidationMessageFor(q => q.Cod_Motivo_Inv, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
         <div class="col-md-12">
-            <div class="col-md-3">
-                <div class="form-group">
-                    <label for="Cod_Motivo_Inv">Código</label>
-                    @Html.TextBoxFor(q => q.Cod_Motivo_Inv, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.Cod_Motivo_Inv, "", new { @class = "text-danger" })
+            <div class="form-group">
+                <label for="Desc_mov_inv">Descripción*</label>
+                @Html.TextBoxFor(q => q.Desc_mov_inv, new { @class = "form-control" })
+                @Html.ValidationMessageFor(q => q.Desc_mov_inv, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <div class="col-md-3">
+            <div class="form-group">
+                <label for="Tipo_Ing_Egr">Donde se muestra este motivo*</label>
+                @Html.DropDownListFor(q => q.Tipo_Ing_Egr, new SelectList(ViewBag.lst_tipos, "IdCatalogo", "Nombre"), new { @class = "form-control" })
+                @Html.ValidationMessageFor(q => q.Tipo_Ing_Egr, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <div class="col-md-4">
+            <div class="form-group">
+                <div class="checkbox">
+                    <label for="Genera_Movi_Inven_bool">@Html.CheckBoxFor(q => q.Genera_Movi_Inven_bool) Genera movimiento en inventario</label>
                 </div>
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label for="Desc_mov_inv">Descripción*</label>
-                    @Html.TextBoxFor(q => q.Desc_mov_inv, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.Desc_mov_inv, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-3">
-                <div class="form-group">
-                    <label for="Tipo_Ing_Egr">Donde se muestra este motivo*</label>
-                    @Html.DropDownListFor(q => q.Tipo_Ing_Egr, new SelectList(ViewBag.lst_tipos, "IdCatalogo", "Nombre"), new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.Tipo_Ing_Egr, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-4">
-                <div class="form-group">
-                    <div class="checkbox">
-                        <label for="Genera_Movi_Inven_bool">@Html.CheckBoxFor(q => q.Genera_Movi_Inven_bool) Genera movimiento en inventario</label>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+</div>
 
 
-    <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index", "MotivoInventario", new {  Area ="Inventario" }, null)">Cancelar</a>
-    </div>
+<div class="box-footer">
+    <button type="submit" class="btn btn-primary">Guardar</button>
+    <a class="btn btn-default" href="@Url.Action("Index", "MotivoInventario", new {  Area ="Inventario" }, null)">Cancelar</a>
+</div>
 
-    @section Scripts {
-        @Scripts.Render("~/bundles/jqueryval")
-    }
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
 
 }
