--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Presentacion/_GridViewPartial_presentacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Presentacion/_GridViewPartial_presentacion.cshtml
@@ -60,8 +60,8 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdPresentacion = DataBinder.Eval(tc.DataItem, "IdPresentacion") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdPresentacion = DataBinder.Eval(tc.DataItem, "IdPresentacion") },
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdPresentacion = DataBinder.Eval(tc.DataItem, "IdPresentacion") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdPresentacion = DataBinder.Eval(tc.DataItem, "IdPresentacion") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -69,7 +69,7 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa}).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
