--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_GridViewPartial_producto.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_GridViewPartial_producto.cshtml
@@ -62,8 +62,8 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdProducto = DataBinder.Eval(tc.DataItem, "IdProducto") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdProducto = DataBinder.Eval(tc.DataItem, "IdProducto") },
+                Html.ActionLink("Modificar", "Modificar", new  { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdProducto = DataBinder.Eval(tc.DataItem, "IdProducto") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdProducto = DataBinder.Eval(tc.DataItem, "IdProducto") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -72,7 +72,7 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
