--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/TipoMovimiento/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/TipoMovimiento/Nuevo.cshtml
@@ -11,6 +11,7 @@
 
 @using (Html.BeginForm("Nuevo","TipoMovimiento",FormMethod.Post, new { @class = "form", @role = "form"}))
 {
+    @Html.HiddenFor(q=>q.IdEmpresa)
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
