--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Marca/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Marca/Nuevo.cshtml
@@ -9,6 +9,7 @@
 }
 @using (Html.BeginForm("Nuevo", "Marca", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q=>q.IdEmpresa)
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
