--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Marca/_GridViewPartial_marca.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Marca/_GridViewPartial_marca.cshtml
@@ -60,8 +60,8 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdMarca = DataBinder.Eval(tc.DataItem, "IdMarca") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdMarca = DataBinder.Eval(tc.DataItem, "IdMarca") },
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdMarca = DataBinder.Eval(tc.DataItem, "IdMarca") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"),  IdMarca = DataBinder.Eval(tc.DataItem, "IdMarca") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -69,7 +69,7 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa  = Core.Erp.Web.Helps.SessionFixed.IdEmpresa}).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
