--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Presentacion/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Presentacion/Nuevo.cshtml
@@ -17,6 +17,7 @@
             </h4>
         </div>
     }
+    @Html.HiddenFor(q=>q.IdEmpresa)
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
