--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/ProductoTipo/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/ProductoTipo/Nuevo.cshtml
@@ -11,6 +11,7 @@
 
 @using (Html.BeginForm("Nuevo", "ProductoTipo", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q=>q.IdEmpresa, new { @id= "IdEmpresa" })
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
