--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/ActivoFijoReportes/ACTF_001.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/ActivoFijoReportes/ACTF_001.cshtml
@@ -10,7 +10,8 @@
 {
     Html.DevExpress().WebDocumentViewer(settings =>
     {
+        settings.ClientSideEvents.Init = "function(s, e) {s.previewModel.reportPreview.zoom(1);}";
         settings.MobileMode = false;
         settings.Name = "webDocumentViewer";
-    }).Bind(Model).GetHtml();
+    }).Bind(Model).GetHtml()
 }
