--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/BancoReportes/BAN_007.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/BancoReportes/BAN_007.cshtml
@@ -98,6 +98,7 @@
         <div class="box-body">
             @Html.DevExpress().WebDocumentViewer(settings =>
        {
+           settings.ClientSideEvents.Init = "function(s, e) {s.previewModel.reportPreview.zoom(1);}";
            settings.MobileMode = false;
            settings.Name = "webDocumentViewer";
        }).Bind(ViewBag.Report).GetHtml()
