--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorCobrarReportes/CXC_003.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorCobrarReportes/CXC_003.cshtml
@@ -82,6 +82,7 @@
                 <div class="box-body">
                     @Html.DevExpress().WebDocumentViewer(settings =>
                {
+                   settings.ClientSideEvents.Init = "function(s, e) {s.previewModel.reportPreview.zoom(1);}";
                    settings.MobileMode = false;
                    settings.Name = "webDocumentViewer";
                }).Bind(ViewBag.Report).GetHtml()
