--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_004.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_004.cshtml
@@ -8,9 +8,10 @@
 }
 @using (Html.BeginForm())
 {
-    Html.DevExpress().WebDocumentViewer(settings =>
-    {
-        settings.MobileMode = false;
-        settings.Name = "webDocumentViewer";
-    }).Bind(Model).GetHtml();
+    @Html.DevExpress().WebDocumentViewer(settings =>
+                       {
+                           settings.ClientSideEvents.Init = "function(s, e) {s.previewModel.reportPreview.zoom(1);}";
+                           settings.MobileMode = false;
+                           settings.Name = "webDocumentViewer";
+                       }).Bind(Model).GetHtml()
 }
