--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_005.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_005.cshtml
@@ -102,10 +102,11 @@
                 </div>
                 <div class="box-body">
                     @Html.DevExpress().WebDocumentViewer(settings =>
-               {
-                   settings.MobileMode = false;
-                   settings.Name = "webDocumentViewer";
-               }).Bind(ViewBag.Report).GetHtml()
+                                       {
+                                           settings.ClientSideEvents.Init = "function(s, e) {s.previewModel.reportPreview.zoom(1);}";
+                                           settings.MobileMode = false;
+                                           settings.Name = "webDocumentViewer";
+                                       }).Bind(ViewBag.Report).GetHtml()
                 </div>
                 <!-- /.box-body -->
                 <div class="box-footer">
