--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/ImportacionReportes/IMP_003.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/ImportacionReportes/IMP_003.cshtml
@@ -107,10 +107,11 @@
         </div>
         <div class="box-body">
             @Html.DevExpress().WebDocumentViewer(settings =>
-   {
-       settings.MobileMode = false;
-       settings.Name = "webDocumentViewer";
-   }).Bind(ViewBag.Report).GetHtml();
+       {
+           settings.ClientSideEvents.Init = "function(s, e) {s.previewModel.reportPreview.zoom(1);}";
+           settings.MobileMode = false;
+           settings.Name = "webDocumentViewer";
+       }).Bind(ViewBag.Report).GetHtml();
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
