--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_001.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_001.cshtml
@@ -9,10 +9,11 @@
 @using (Html.BeginForm())
 {
     @Html.DevExpress().WebDocumentViewer(settings =>
-    {
-        settings.MobileMode = false;
-        settings.Name = "webDocumentViewer";
-        
-    }).Bind(Model).GetHtml();
+{
+    settings.ClientSideEvents.Init = "function(s, e) {s.previewModel.reportPreview.zoom(1);}";
+    settings.MobileMode = false;
+    settings.Name = "webDocumentViewer";
+
+}).Bind(Model).GetHtml()
 
 }
