--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_005.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_005.cshtml
@@ -10,9 +10,10 @@
 {
     @Html.DevExpress().WebDocumentViewer(settings =>
 {
+    settings.ClientSideEvents.Init = "function(s, e) {s.previewModel.reportPreview.zoom(1);}";
     settings.MobileMode = false;
     settings.Name = "webDocumentViewer";
 
-}).Bind(Model).GetHtml();
+}).Bind(Model).GetHtml()
 
 }
