--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROl_014.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROl_014.cshtml
@@ -71,9 +71,10 @@
         <div class="box-body">
             @Html.DevExpress().WebDocumentViewer(settings =>
        {
+           settings.ClientSideEvents.Init = "function(s, e) {s.previewModel.reportPreview.zoom(1);}";
            settings.MobileMode = false;
            settings.Name = "webDocumentViewer";
-       }).Bind(ViewBag.Report).GetHtml();
+       }).Bind(ViewBag.Report).GetHtml()
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
