--- a/ERP/Core.Erp.Web/Areas/General/Views/VisorDeVideo/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/VisorDeVideo/Modificar.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core.Erp.Info.General.Visor_video_Info
+﻿@model Core.Erp.Info.General.tb_visor_video_Info
 @{
     ViewBag.Title = "Modificar video";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
